Source/JavaScriptCore/JavaScriptCore.vcxproj/copy-files.cmd
@@ -75,6 +75,7 @@ xcopy /y "%DerivedSourcesDirectory%\InspectorJSFrontendDispatchers.h" "%PrivateH
 
 echo Copying builtins header as if it were a private header...
 xcopy /y "%DerivedSourcesDirectory%\JSCBuiltins.h" "%PrivateHeadersDirectory%" >NUL
+xcopy /y "%DerivedSourcesDirectory%\Bytecodes.h" "%PrivateHeadersDirectory%" >NUL
 
 echo Copying resources...
 mkdir "%ResourcesDirectory%" 2>NUL
